CLEANUP: Renamed rdf_back/[3,4] → rdf_back_triple/[3,4].
TESTING: Made sorting premises and returning bindings optional.

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
 #+TITLE: RDF-Back
 #+AUTHOR: Wouter Beek
 
-RDF(S) entailment through backward-chaning.
+RDF(S) entailment through backward chaining.
